--- a/styles/sass/components/_filter.scss
+++ b/styles/sass/components/_filter.scss
@@ -1,6 +1,4 @@
 .filter {
-	border-bottom: 1px solid #757575;
-    margin-bottom: 30px;
 	> .filter-header {
 		@include transition(background-color .3s);
 
@@ -17,12 +15,11 @@
 	}
 	> .filter-body {
 		> .filter-action {
-			margin: 0px -13px 15px;
-			padding: 0px 5px 0px;
+			margin: 0px 0px 15px;
 			.btn-link {
 				font-size: 11px;
 				outline: none !important;
-				padding: 0px 5px;
+				padding: 0px 5px 0px 0px;
 				line-height: 14px;
 				> .fa-caret-down {
 					font-size: 18px;
@@ -32,6 +29,9 @@
 				}
 			}
 			> .pull-right { 
+				.btn-link {
+					padding-right: 0px;
+				}
 				.dropdown-menu {
 					padding: 5px 0px;
 					min-width: 100%;
@@ -45,17 +45,19 @@
 		}
 		> .filter-tags {
 			@include clearfix();
-			margin: 0px -2px;
+			margin: 0px -2px 5px;
 			text-align: center;
 		}
 		> .filter-more-tags {
 			text-align: center; 
 			&.active {
-				margin: 10px -5px 0px;
+				margin: -10px -5px 0px;
 			}
 		}
 		> .btn-more-tags {
+			background-color: #f0f0f0;
 			text-align: center;
+			@include position(absolute, $right: 0px, $bottom: 0px, $left: 0px);
 			> .btn-link {
 				display: inline-block;
 				font-size: 11px;
@@ -63,7 +65,6 @@
 				padding: 10px 15px 15px;
 				&.collapsed {
 					position: relative;
-					top: -8px;
 					padding-top: 0px;
 				}
 			}
@@ -112,6 +113,8 @@
     			}
 			}
 			> .btn-more-tags {
+				background-color: transparent;
+				position: relative;
     			> .btn-link {
     				font-size: 10px;
     				&.collapsed {
